--- a/index2.html
+++ b/index2.html
@@ -1,30 +1,33 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bem-vindo</title>
     <style>
-        body {
+        /* Reset básico para margin e padding */
+        body, html {
             margin: 0;
             padding: 0;
-            height: 100vh;
+            height: 100%;
+            font-family: Arial, sans-serif;
+            background-color: #e0f7fa; /* Fundo azul claro */
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f0f8ff; /* Azul claro */
-            font-family: Arial, sans-serif;
         }
         h1 {
-            font-size: 3em;
-            color: #333;
+            font-size: 3rem;
+            color: #00796b; /* Verde-azulado */
         }
     </style>
 </head>
 <body>
-    <h1>Bem-vindo,Anete Jean Dpmingo!</h1>
+    <h1>Bem-vindo, Anete!</h1>
 </body>
 </html>
+
+   
+            
 
 
