--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Define a codificação de caracteres como UTF-8 (suporta acentos e caracteres especiais) -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Configura a viewport para responsividade em dispositivos móveis -->
-  <title>Currículo Acadêmico - Richardson Schawarski</title>
+  <title>Currículo Acadêmico - Anete Jean Domingo</title>
   <!-- Título que aparece na aba do navegador -->
   <link rel="stylesheet" href="style.css">
   <!-- Link para o arquivo CSS externo (estilos) -->
@@ -24,7 +24,7 @@
     <img src="img/richardson.jpg" alt="Foto de perfil" class="profile-img">
     <div class="header-text">
        <!-- Cabeçalho da página -->
-      <h1>Richardson Schawarski</h1>
+      <h1>Anete jean Domingo</h1>
         <!-- Título principal (nome) -->
       <p>Professor de Programação e Tecnologia Educacional</p>
        <!-- Subtítulo (cargo) -->
@@ -63,7 +63,7 @@
     <!-- Seção de formação acadêmica -->
     <h2>Formação Acadêmica</h2>
     <p>Bacharel em Sistemas de informação - Instituto Federal do Paraná (IFPR)</p>
-    <p>Licenciado em Matemática - UNIASSELVI (Formação Pedagógica)</p>
+    <p>Licenciado em Matemática - UNIASSELVI (Formação matematica)</p>
     <!-- Parágrafo com informação -->
     <p>Pós-graduação em Tecnologias Educacionais - UEL</p>
   </section>
@@ -72,7 +72,7 @@
     <!-- Seção de experiência profissional -->
     <h2>Experiência Profissional</h2>
     <ul>
-      <li>Professor de Programação e Robótica no Ensino Técnico - Desde 2023</li>
+      <li>Professor de Programação  no Ensino Técnico - Desde 2023</li>
       <li>Coordenador de Curso Técnico em Desenvolvimento de Sistemas</li>
       <li>Responsável pelos Laboratórios de Informática (Linux e macOS)</li>
     </ul>
@@ -81,13 +81,13 @@
   <section class="contato">
     <!-- Seção de contato -->
     <h2>Contato</h2>
-    <p>Email: richardson.cruz@escola.pr.gov.br</p>
-    <p>GitHub: github.com/professorrichardson</p>
+    <p>Email: anete.domingo@escola.pr.gov.br</p>
+    <p>GitHub: github.com/professoaanete</p>
   </section>
 
   <footer>
     <!-- Rodapé da página -->
-    <p>&copy; 2025 Richardson Schawarski. Projeto de exemplo para formação de professores.</p>
+    <p>&copy; 2025 Anete jean Domingo. Projeto de exemplo para formação de professores.</p>
     <!-- Texto de copyright e observação. &copy; → © (copyright) -->
   </footer>
 
